AC_INIT([amarbtkf91], [1.0], [bug-report@address])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])

## https://autotools.io/autoconf/arguments.html
## https://www.gnu.org/software/autoconf/manual/autoconf-2.60/html_node/External-Software.html

# But also see http://stackoverflow.com/questions/10199754
# How about requiring the user to do something like
# configure LDFLAGS='-I/usr/local/include/flint -L/usr -L/usr/local -L/usr/local/flint'

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
